kubernetes/main/apps/linkwarden/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkwarden
  name: linkwarden-deployment
  namespace: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.14.0
          ports:
            - containerPort: 3000
              name: http
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /pfs
              name: data
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkwarden
