kubernetes/main/apps/linkwarden/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkwarden
  name: linkwarden
  namespace: linkwarden
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: linkwarden
  type: ClusterIP
