kubernetes/main/apps/linkwarden/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden-ingress
  namespace: linkwarden
  annotations:
    external-dns.alpha.kubernetes.io/target: "bookmark.${SECRET_EXTERNAL_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "bookmark.${SECRET_EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  name: http
